Get build working with Java 9 and 10.